fix homepage spacing, make posts tag gray

--- a/src/components/grid-posts.css
+++ b/src/components/grid-posts.css
@@ -21,12 +21,21 @@
   padding: 2em;
 }
 .post-grid--item--tag {
-  text-decoration: none;
-  color: white;
+  padding: 0.25rem 0.5rem;
+  margin: 0.25rem;
+  border: 1px solid #dcdcdc;
+  border-radius: 0.25rem;
+  font-size: 0.8rem;
   display: inline-block;
-  background-color: #9c27b0;
-  padding: 0.25em 0.75em;
-  border-radius: 3.5rem;
-  font-size: 0.8em;
-  margin-bottom: 0.5em;
+  background: white;
+  margin-left: 0;
+
+  text-decoration: none;
+}
+.post-grid--item--tag:hover {
+  text-decoration: underline;
+}
+
+.post-grid--item--tag:last-of-type {
+  margin-right: 0;
 }
